# seele-scholar-agent

./: .gitignore  LICENSE  README.ja.md  README.md  README.zh-CN.md  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml
examples/: common.py  custom_retrievers.py  figure_placeholders.py  full_workflow_with_interrupts.py  research_proposal_workflow.py  simple_workflow.py  stream_nodes.py
src/seele_scholar_agent/: .env.example  __init__.py  _dependency_warnings.py  agent_config.py  config.py  document_profile.py  graph.py  i18n.py  logging.py  state.py  style_packs.py
src/seele_scholar_agent/budget/: __init__.py  allocator.py  length_gate.py  models.py  revision.py
src/seele_scholar_agent/citation/: __init__.py  models.py  source_gate.py
src/seele_scholar_agent/draft/: __init__.py  gates.py  integration.py  mapping.py  (+1 more)
tests/: conftest.py
tests/evals/: test_quality_metrics.py
tests/fixtures/: mock_responses.py  sample_states.py
tests/integration/: test_graph.py  test_node_state_flow.py
tests/unit/: test_budget.py  test_citation_source_gate.py  test_claim_audit.py  test_consistency_checker.py  test_draft_integration.py  test_exemplar.py  test_finalizer.py  test_integrity_gate.py  test_language_style_audit.py  test_material_registry.py  test_methodology_audit.py  test_outline_quality_gate.py  test_paragraph_quality_audit.py  test_planner.py  test_profiles.py  test_reference_generator.py  test_researcher.py  test_reviewer.py  test_state.py  test_style_packs.py  test_version.py  test_writer.py  test_writer_input_builder.py
(+38 files in other folders)
